made the webpage layout descent

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
 
          <!-- logo -->
-          <img src="assets/Asset 3@3x.png" alt="Lucky shrub Logo">
+          <img src="assets/Asset 2@3x.png" alt="Lucky shrub Logo" class="logo">
     </header>
     <nav>
         <ul>
@@ -23,12 +23,16 @@
     <main>
         <section>
             <article>
-
+                <!-- promotion -->
+                <h1>Lucky Shrubs</h1>
+                <p class="home"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et error odio at. Saepe illum minus qui ab fugiat similique voluptatibus, excepturi provident delectus expedita, eum laudantium voluptates quos. Reprehenderit amet cupiditate voluptates officia quae? Voluptatibus dicta sint perferendis neque quo, reprehenderit ipsam expedita odit atque debitis quae adipisci, minus dolor?</p>
             </article>
         </section>
         <section>
             <article>
-                
+                <div class="products">
+
+                </div>
             </article>
         </section>
     </main>
