--- a/index.html
+++ b/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Lucky Shrub Garden Designs</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-
-         <!-- logo -->
-          <img src="assets/Asset 2@3x.png" alt="Lucky shrub Logo" class="logo">
+      <!-- logo -->
+      <img src="assets/Asset 2@3x.png" alt="Lucky shrub Logo" class="img-logo" />
     </header>
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#info">Info</a></li>
-        </ul>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#info">Info</a></li>
+      </ul>
     </nav>
     <main>
+      <div class="home" id="home">
         <section>
-            <article>
-                <!-- promotion -->
-                <h1>Lucky Shrubs</h1>
-                <p class="home"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et error odio at. Saepe illum minus qui ab fugiat similique voluptatibus, excepturi provident delectus expedita, eum laudantium voluptates quos. Reprehenderit amet cupiditate voluptates officia quae? Voluptatibus dicta sint perferendis neque quo, reprehenderit ipsam expedita odit atque debitis quae adipisci, minus dolor?</p>
-            </article>
+          <article>
+            <!-- promotion -->
+            <h1 id="main-heading1">Lucky Shrubs</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et error
+              odio at. Saepe illum minus qui ab fugiat similique voluptatibus,
+              excepturi provident delectus expedita, eum laudantium voluptates
+              quos. Reprehenderit amet cupiditate voluptates officia quae?
+              Voluptatibus dicta sint perferendis neque quo, reprehenderit ipsam
+              expedita odit atque debitis quae adipisci, minus dolor?
+            </p>
+          </article>
         </section>
-        <section>
+      </div>
+      <section>
+          <div class="products" id="products">
             <article>
-                <div class="products">
-
-                </div>
+              <h1>lorem</h1>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est
+                necessitatibus cumque ducimus aliquid. Architecto, ratione unde!
+                Deleniti unde iusto quidem.
+              </p>
             </article>
-        </section>
+            <article>
+              <h1>lorem</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
+                voluptatibus maxime nesciunt omnis aspernatur. Quis
+                exercitationem quisquam distinctio beatae natus?
+              </p>
+            </article>
+            <article>
+              <h1>lorem</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                fuga aut laudantium, commodi impedit natus. Ex sapiente commodi
+                omnis quasi.
+              </p>
+            </article>
+          </div>
+      </section>
     </main>
     <footer>
-
+<div><img src="assets/Asset 1@3x.png" alt="lucky shrubs logo" class="img-thumbs"></div>         
+<div><p>&copy;Lucky Shrubs</p></div>         
     </footer>
-</body>
+  </body>
 </html>
