made a semantically good website along with a pleasant scheme and images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <header>
       <!-- logo -->
-      <img src="assets/Asset 2@3x.png" alt="Lucky shrub Logo" class="img-logo" />
+      <img
+        src="assets/Asset 2@3x.png"
+        alt="Lucky shrub Logo"
+        class="img-logo"
+      />
     </header>
     <nav>
       <ul>
@@ -20,54 +24,63 @@
       </ul>
     </nav>
     <main>
-      <div class="home" id="home">
         <section>
-          <article>
             <!-- promotion -->
-            <h1 id="main-heading1">Lucky Shrubs</h1>
+            <div class="home" id="home">
+                <h1 id="main-heading1">Lucky Shrubs</h1>
+                <article>
+            <div class="promotion">
+              <p class="promotion-p">50% OFF THIS WEEKEND</p>
+              <img
+                src="assets/view-robot-tending-maintaining-gardens.jpg\"
+                alt="garden image"
+                class="promotion-img"
+              />
+            </div>
+          </article>
+        </div>
+        </section>
+      <section>
+        <div class="products" id="products">
+          <article class="products-1">
+            <h1>lorem</h1>
+            <img src="assets/what we do.jpg" alt="what we do">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et error
-              odio at. Saepe illum minus qui ab fugiat similique voluptatibus,
-              excepturi provident delectus expedita, eum laudantium voluptates
-              quos. Reprehenderit amet cupiditate voluptates officia quae?
-              Voluptatibus dicta sint perferendis neque quo, reprehenderit ipsam
-              expedita odit atque debitis quae adipisci, minus dolor?
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est
+              necessitatibus cumque ducimus aliquid. Architecto, ratione unde!
+              Deleniti unde iusto quidem.
             </p>
           </article>
-        </section>
-      </div>
-      <section>
-          <div class="products" id="products">
-            <article>
+          <article class="products-2">
+            <h1>lorem</h1>
+            <img src="assets/out mission.png" alt="our mission">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
+              voluptatibus maxime nesciunt omnis aspernatur. Quis exercitationem
+              quisquam distinctio beatae natus?
+            </p>
+          </article>
+          <article class="products-3">
               <h1>lorem</h1>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est
-                necessitatibus cumque ducimus aliquid. Architecto, ratione unde!
-                Deleniti unde iusto quidem.
-              </p>
-            </article>
-            <article>
-              <h1>lorem</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
-                voluptatibus maxime nesciunt omnis aspernatur. Quis
-                exercitationem quisquam distinctio beatae natus?
-              </p>
-            </article>
-            <article>
-              <h1>lorem</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-                fuga aut laudantium, commodi impedit natus. Ex sapiente commodi
-                omnis quasi.
-              </p>
-            </article>
-          </div>
+            <img src="assets/contact us.png" alt="contact us">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              fuga aut laudantium, commodi impedit natus. Ex sapiente commodi
+              omnis quasi.
+            </p>
+          </article>
+        </div>
       </section>
     </main>
     <footer>
-<div><img src="assets/Asset 1@3x.png" alt="lucky shrubs logo" class="img-thumbs"></div>         
-<div><p>&copy;Lucky Shrubs</p></div>         
+      <div>
+        <img
+          src="assets/Asset 2@3x.png"
+          alt="lucky shrubs logo"
+          class="img-thumbs"
+        />
+      </div>
+      <div><p class="copyright">&copy;Lucky Shrubs</p></div>
     </footer>
   </body>
 </html>
