--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
       </ul>
     </nav>
     <main>
-        <section>
-            <!-- promotion -->
-            <div class="home" id="home">
-                <h1 id="main-heading1">Lucky Shrubs</h1>
-                <article>
+      <section>
+        <!-- promotion -->
+        <div class="home" id="home">
+          <h1 id="main-heading1">Lucky Shrubs</h1>
+          <article>
             <div class="promotion">
-              <p class="promotion-p">50% OFF THIS WEEKEND</p>
+              <div class="promotion-p">
+                <h1>50% off this Weekend</h1>
+                <p>
+                  Give us a call this Weekend and get you garden beautified at
+                  half the cost !!!
+                </p>
+              </div>
               <img
                 src="assets/view-robot-tending-maintaining-gardens.jpg\"
                 alt="garden image"
@@ -39,34 +45,40 @@
             </div>
           </article>
         </div>
-        </section>
+      </section>
       <section>
         <div class="products" id="products">
           <article class="products-1">
-            <h1>lorem</h1>
-            <img src="assets/what we do.jpg" alt="what we do">
+            <h1>What We Do</h1>
+            <img src="assets/what we do.jpg" alt="what we do" />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est
-              necessitatibus cumque ducimus aliquid. Architecto, ratione unde!
-              Deleniti unde iusto quidem.
+              Based in Tuscon, Arizona, Lucky Shrub is a medium-sized garden
+              design firm that specializes in garden design and creation,
+              maintenance and landscaping. The company also runs a small plant
+              nursery that sells indoor and outdoor plants, making them a
+              one-stop shop for clients to "transform any space into an oasis
+              you can be proud of
             </p>
           </article>
           <article class="products-2">
-            <h1>lorem</h1>
-            <img src="assets/out mission.png" alt="our mission">
+            <h1>About Us</h1>
+            <img src="assets/out mission.png" alt="our mission" />
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic
-              voluptatibus maxime nesciunt omnis aspernatur. Quis exercitationem
-              quisquam distinctio beatae natus?
+              Lucky Shrub was started by a husband and wife team, Jason and
+              Maria, who share a long-time love for plants. Jason is the garden
+              architect. He creates and oversees all designs while managing his
+              team of landscapers. Maria manages all the marketing for the
+              company and oversees the nursery.
             </p>
           </article>
           <article class="products-3">
-              <h1>lorem</h1>
-            <img src="assets/contact us.png" alt="contact us">
+            <h1>Products</h1>
+            <img src="assets/contact us.png" alt="contact us" />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-              fuga aut laudantium, commodi impedit natus. Ex sapiente commodi
-              omnis quasi.
+              Lucky Shrubs offere a variety of Services , including Garden
+              Design and creation, it's maintainance and landspacing. We have a
+              Strong Reputation among our customers and we are endorsed by more
+              than 100 customers.
             </p>
           </article>
         </div>
