--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
               </div>
               <img
-                src="assets/view-robot-tending-maintaining-gardens.jpg\"
+                src="assets/view-robot-tending-maintaining-gardens.jpg"
                 alt="garden image"
                 class="promotion-img"
               />
