changed image format for faster load times

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
               </div>
               <img
-                src="assets/view-robot-tending-maintaining-gardens.jpg"
+                src="assets/view-robot-tending-maintaining-gardens.webp"
                 alt="garden image"
                 class="promotion-img"
               />
@@ -50,7 +50,7 @@
         <div class="products" id="products">
           <article class="products-1">
             <h1>What We Do</h1>
-            <img src="assets/what we do.jpg" alt="what we do" />
+            <img src="assets/what we do.webp" alt="what we do" />
             <p>
               Based in Tuscon, Arizona, Lucky Shrub is a medium-sized garden
               design firm that specializes in garden design and creation,
@@ -62,7 +62,7 @@
           </article>
           <article class="products-2">
             <h1>About Us</h1>
-            <img src="assets/out mission.png" alt="our mission" />
+            <img src="assets/out mission.webp" alt="our mission" />
             <p>
               Lucky Shrub was started by a husband and wife team, Jason and
               Maria, who share a long-time love for plants. Jason is the garden
@@ -73,7 +73,7 @@
           </article>
           <article class="products-3">
             <h1>Products</h1>
-            <img src="assets/contact us.png" alt="contact us" />
+            <img src="assets/contact us.webp" alt="contact us" />
             <p>
               Lucky Shrubs offere a variety of Services , including Garden
               Design and creation, it's maintainance and landspacing. We have a
